<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/unable_to_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dip"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/no_data_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dip"
            android:text="@string/no_data_available"
            android:textColor="@color/edittext_hint_color"
            android:gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/orange_button_color"
            android:text="@string/retry"
            android:textColor="@color/edittext_hint_color"
            android:textSize="12.0sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="10dip"
        android:paddingHorizontal="20dip"
        android:visibility="visible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dip"
                android:text="@string/top_label_text"
                android:textColor="@color/edittext_hint_color"
                android:textStyle="italic"
                android:gravity="center"/>

            <TextView
                android:id="@+id/from_date_label_tv"
                android:text="@string/from_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dip"
                android:paddingHorizontal="5dip"
                android:textSize="@dimen/font_size"
                android:textColor="@color/edittext_text_color"/>

            <TextView
                android:id="@+id/from_date_selector"
                android:hint="@string/from_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dip"
                android:paddingHorizontal="10dip"
                android:layout_marginVertical="5dip"
                android:textSize="@dimen/font_size"
                android:background="@drawable/all_borders"
                android:textColor="@color/edittext_text_color"/>

            <TextView
                android:id="@+id/to_date_label_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_date"
                android:paddingVertical="10dip"
                android:paddingHorizontal="5dip"
                android:textSize="@dimen/font_size"
                android:textColor="@color/edittext_text_color"/>

            <TextView
                android:id="@+id/to_date_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to_date"
                android:paddingVertical="10dip"
                android:paddingHorizontal="10dip"
                android:layout_marginVertical="5dip"
                android:textSize="@dimen/font_size"
                android:background="@drawable/all_borders"
                android:textColor="@color/edittext_text_color"/>

            <TextView
                android:id="@+id/submit_button"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/submit"
                android:layout_marginVertical="10dip"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/submit_button_background"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/result_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="30dip"
                android:background="@drawable/all_borders"
                android:textColor="@color/edittext_hint_color"
                android:textStyle="italic"
                android:visibility="gone"
                android:gravity="center"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="gone"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>